# reinforced-concrete-beam-design

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: Main.cpp  Main.txt
app/src/pymodule/: example.h  modulebeamdesign.h  moduleheader.h
input_output/input/: data_excel.xlsx
input_output/output/: data_output.txt
rco_library/: CMakeLists.txt
rco_library/material/: material.cpp  material.hpp
rco_library/moment/: moment.cpp  moment.hpp
rco_library/reinforced_concrete/: beam_design.cpp  beam_design.hpp
rco_library/shear/: shear.cpp  shear.hpp
rco_library/torsion/: torsion.cpp  torsion.hpp
